# duna-desktop-viewer

./: .gitignore  CMakeLists.txt  README.md  modules.repos
common/common/: camera.h  gl_line_vertex.h  gl_point_vertex.h  gl_text2d.h  gl_types.h  gldata.h  gltext.h
common/src/: camera.cpp  gl_text2d.cpp  gldata.cpp  gltext.cpp
dataset/: csi_cam_0.yaml
docs/: duna_desktop_viewer.puml
include/: calibration_window.h  camera_calibration_model.h  cloud_loader.h  cloud_texture.h  colormap.hpp  image_viewer.h  main_window.h  point_picker.h  qgl_viewer.h  trena.h  utilities.h
src/: CMakeLists.txt  README.md  build_duna.sh  calibration_window.cpp  calibration_window.ui  cloud_loader.cpp  cloud_texture.cpp  image_rectification.cpp  image_viewer.cpp  main.cpp  main_window.cpp  main_window.ui  point_picker.cpp  qgl_viewer.cpp  utilities.cpp
src/dataset/: Salasplit.ply  Salasplit_color.pcd
src/include/: calibration_window.h  colormap.hpp  image_rectification.h  main_window.h  point_picker.h  qgl_viewer.h  utilities.h
src/shaders/: source.frag  source.vert
